Reduce Guava usage (#2751)
- Use List/Set.of
- Use StandardCharsets
- Use java.util.Objects
- Use try-with-resources